2003-02-25  James Willcox  <jwillcox@gnome.org>

	* recent-files/Makefile.am: Install headers in gedit/recent-files instead of gedit/

2003-02-11  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* src/dialogs/plugin-manager.glade2: Removed mnemonics for
	the tab names Description and Details.
	Fixes Bug #105721.

2003-02-01  James Willcox  <jwillcox@gnome.org>

	* src/recent-files/egg-recent-model.c: (egg_recent_model_read),
	(egg_recent_model_changed):

	Update to latest libegg recent-files code.

2003-01-27  Paolo Maggi <paolo.maggi@polito.it>

	* *.c:
	* dialogs/*.c: make sure to include <config.h>

	* dialogs/gedit-preferences-dialog.c: remove COLUMN_INDEX
	(add_enc_to_list): comment unused code
	(create_encodings_treeview_model): mem leak
	(gedit_preferences_dialog_encodings_treeview_selection_changed):
	manage the case in which selected == FALSE
	(gedit_preferences_dialog_up_enc_button_clicked): code cleanup
	(gedit_preferences_dialog_down_enc_button_clicked): ditto
	(gedit_preferences_dialog_add_encoding): remove COLUMN_INDEX column
	(gedit_preferences_dialog_add_encodings): unselect all items

2003-01-21  James Willcox  <jwillcox@gnome.org>

	* gedit-mdi-child.c: (set_tab_icon): Allow svg icons
	* recent-files/*:  Update to latest from libegg

2003-01-21  Paolo Maggi <paolo.maggi@polito.it>

	* dialogs/gedit-dialog-goto-line.c (dialog_goto_line_get_dialog):
	don't pass dialog when connecting "insert_text"

2003-01-15  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-commands.c (gedit_cmd_help_about): updated about 
	box

	* dialogs/gedit-preferences-dialog.c (gedit_preferences_dialog_init)
	(gedit_preferences_dialog_finalize)
	(gedit_preferences_dialog_setup_font_and_)
	(gedit_preferences_dialog_setup_print_fon): fixed mem leaks

2003-01-14  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-document.c (gedit_document_finalize):
	free document->priv->encoding
	(gedit_document_save_as_real): don't leak chars and
	bak_ext
